# stud

./: .gitignore  Makefile  Makefile.in  README.md  config.h.in  configuration.c  configuration.h  configure  configure.in  init.stud  log.c  log.h  shctx.c  shctx.h  stud.8  stud.c  stud.h
debian/: changelog  postinst  postrm  prerm  rules
rhel/: stud.spec
upstart/: stud.conf
