#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(stud, 0.3, https://github.com/bumptech/stud/issues)
AC_CONFIG_SRCDIR([ringbuffer.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

# Checks for libraries.
#AC_CHECK_LIB([crypto], [main])
AC_CHECK_LIB(ev, ev_default_loop, [], [ AC_MSG_ERROR([libev is required, please install.]) ])
AC_CHECK_LIB(ssl, SSL_library_init, [], [ AC_MSG_ERROR([libssl is required, please install.]) ])

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h stddef.h stdint.h stdlib.h string.h sys/ioctl.h sys/socket.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_C_INLINE
AC_TYPE_INT32_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT32_T

# Checks for library functions.
AC_FUNC_FORK
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_CHECK_FUNCS([inet_ntoa memset socket strchr strerror strtol])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
